# Chatbot

./: main.py  pyproject.toml  settings.py
agents/chat/: agent.py
backend/: database.py  ingest.py  main.py  migration.py  pyproject.toml  schema_ctx.py  settings.py  test.py
backend/core/agents/: chat_agent.py  knowledge_agent.py  sql_gen_agent.py
backend/core/agents/prompts/: chat_prompt.py  sql_gen_prompt.py  vectordb_prompt.py
backend/core/models/: db_models.py  models.py
backend/core/repositories/: conversation.py
backend/core/router/: chat_router.py
backend/core/services/: chat_service.py
backend/core/utils/: database.py  schema.py  streaming.py
backend/models/: prompt.py
backend/repositories/: conversation.py
backend/repositories/models/: models.py
backend/router/: chat_router.py
backend/router/models/: request.py
backend/services/: chat.py  streaming.py
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  global.css
frontend/src/components/: Header.tsx  Logo.tsx  SidebarMenu.tsx
frontend/src/components/buttons/: SendButton.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatContainer.tsx  ChatInput.tsx
frontend/src/components/services/: chat.service.ts
frontend/src/libs/: api.ts
frontend/src/stores/: ChatStore.ts
frontend/src/types/: system.ts
models/: prompt.py
services/: chat.py
