[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg[binary]>=3.2.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.10",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "asyncpg>=0.30.0",
]
